src/java/DAS/parsers/antrl/SqlDASParser.py
# $ANTLR 3.1.3 Mar 17, 2009 19:23:44 SqlDAS.g 2009-05-14 13:46:34

import sys
from antlr3 import *
from antlr3.compat import set, frozenset
          
from ValidateKeyword import *


kws = []
okws = []
constraints = []
orderingkw = []




# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
COMMA=5
T__42=42
T__28=28
T__23=23
T__13=13
T__21=21
T__19=19
DOT=10
T__39=39
T__30=30
T__17=17
T__27=27
T__24=24
AMP=11
T__34=34
T__15=15
T__35=35
T__36=36
T__20=20
WS=12
EQ=6
T__44=44
LT=7
GT=8
T__14=14
T__33=33
T__22=22
T__29=29
KW=4
T__43=43
T__31=31
T__40=40
EOF=-1
T__16=16
T__32=32
T__38=38
T__37=37
T__26=26
T__25=25
NOT=9
T__41=41
T__18=18

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "KW", "COMMA", "EQ", "LT", "GT", "NOT", "DOT", "AMP", "WS", "'count'", 
    "'sum'", "'('", "')'", "'WHERE'", "'where'", "'select'", "'SELECT'", 
    "'find'", "'FIND'", "'and'", "'AND'", "'order'", "'ORDER'", "'by'", 
    "'BY'", "'or'", "'OR'", "'in'", "'IN'", "'not'", "'NOT'", "'like'", 
    "'LIKE'", "'COUNT'", "'SUM'", "'asc'", "'ASC'", "'desc'", "'DESC'", 
    "'between'", "'BETWEEN'"
]




class SqlDASParser(Parser):
    grammarFileName = "SqlDAS.g"
    antlr_version = version_str_to_tuple("3.1.3 Mar 17, 2009 19:23:44")
    antlr_version_str = "3.1.3 Mar 17, 2009 19:23:44"
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super(SqlDASParser, self).__init__(input, state, *args, **kwargs)

        self.dfa3 = self.DFA3(
            self, 3,
            eot = self.DFA3_eot,
            eof = self.DFA3_eof,
            min = self.DFA3_min,
            max = self.DFA3_max,
            accept = self.DFA3_accept,
            special = self.DFA3_special,
            transition = self.DFA3_transition
            )

        self.dfa16 = self.DFA16(
            self, 16,
            eot = self.DFA16_eot,
            eof = self.DFA16_eof,
            min = self.DFA16_min,
            max = self.DFA16_max,
            accept = self.DFA16_accept,
            special = self.DFA16_special,
            transition = self.DFA16_transition
            )






                


        

              	




    # $ANTLR start "stmt"
    # SqlDAS.g:29:1: stmt : select selectList ( where constraintList )? ( order by orderList )? ;
    def stmt(self, ):

        try:
            try:
                # SqlDAS.g:29:6: ( select selectList ( where constraintList )? ( order by orderList )? )
                # SqlDAS.g:29:8: select selectList ( where constraintList )? ( order by orderList )?
                pass 
                self._state.following.append(self.FOLLOW_select_in_stmt42)
                self.select()

                self._state.following.pop()
                self._state.following.append(self.FOLLOW_selectList_in_stmt44)
                self.selectList()

                self._state.following.pop()
                # SqlDAS.g:29:26: ( where constraintList )?
                alt1 = 2
                LA1_0 = self.input.LA(1)

                if ((17 <= LA1_0 <= 18)) :
                    alt1 = 1
                if alt1 == 1:
                    # SqlDAS.g:29:27: where constraintList
                    pass 
                    self._state.following.append(self.FOLLOW_where_in_stmt47)
                    self.where()

                    self._state.following.pop()
                    self._state.following.append(self.FOLLOW_constraintList_in_stmt49)
                    self.constraintList()

                    self._state.following.pop()



                # SqlDAS.g:29:50: ( order by orderList )?
                alt2 = 2
                LA2_0 = self.input.LA(1)

                if ((25 <= LA2_0 <= 26)) :
                    alt2 = 1
                if alt2 == 1:
                    # SqlDAS.g:29:51: order by orderList
                    pass 
                    self._state.following.append(self.FOLLOW_order_in_stmt54)
                    self.order()

                    self._state.following.pop()
                    self._state.following.append(self.FOLLOW_by_in_stmt56)
                    self.by()

                    self._state.following.pop()
                    self._state.following.append(self.FOLLOW_orderList_in_stmt58)
                    self.orderList()

                    self._state.following.pop()







                        
            except:
            	raise
        finally:

            pass
        return 

    # $ANTLR end "stmt"


    # $ANTLR start "orderList"
    # SqlDAS.g:32:1: orderList : ( orderList1 | orderList1 orderKw );
    def orderList(self, ):

        try:
            try:
                # SqlDAS.g:32:11: ( orderList1 | orderList1 orderKw )
                alt3 = 2
                alt3 = self.dfa3.predict(self.input)
                if alt3 == 1:
                    # SqlDAS.g:32:12: orderList1
                    pass 
                    self._state.following.append(self.FOLLOW_orderList1_in_orderList68)
                    self.orderList1()

                    self._state.following.pop()


                elif alt3 == 2:
                    # SqlDAS.g:33:5: orderList1 orderKw
                    pass 
                    self._state.following.append(self.FOLLOW_orderList1_in_orderList74)
                    self.orderList1()

                    self._state.following.pop()
                    self._state.following.append(self.FOLLOW_orderKw_in_orderList76)
                    self.orderKw()

                    self._state.following.pop()



                        
            except:
            	raise
        finally:

            pass
        return 

    # $ANTLR end "orderList"


    # $ANTLR start "orderList1"
    # SqlDAS.g:35:1: orderList1 : okw= KW ( COMMA okw= KW )* ;
    def orderList1(self, ):

        okw = None

        try:
            try:
                # SqlDAS.g:35:12: (okw= KW ( COMMA okw= KW )* )
                # SqlDAS.g:35:13: okw= KW ( COMMA okw= KW )*
                pass 
                okw=self.match(self.input, KW, self.FOLLOW_KW_in_orderList186)
                #action start
                okws.append(str(okw.text))
                #action end
                #action start
                validateKw(okw.text)
                #action end
                # SqlDAS.g:36:4: ( COMMA okw= KW )*
                while True: #loop4
                    alt4 = 2
                    LA4_0 = self.input.LA(1)

                    if (LA4_0 == COMMA) :
                        alt4 = 1


                    if alt4 == 1:
                        # SqlDAS.g:37:3: COMMA okw= KW
                        pass 
                        self.match(self.input, COMMA, self.FOLLOW_COMMA_in_orderList1101)
                        okw=self.match(self.input, KW, self.FOLLOW_KW_in_orderList1108)
                        #action start
                        okws.append(str(okw.text))
                        #action end
                        #action start
                        validateKw(okw.text)
                        #action end


                    else:
                        break #loop4




                        
            except:
            	raise
        finally:

            pass
        return 

    # $ANTLR end "orderList1"


    # $ANTLR start "orderKw"
    # SqlDAS.g:41:1: orderKw : oing= ordering ;
    def orderKw(self, ):

        oing = None


        try:
            try:
                # SqlDAS.g:41:10: (oing= ordering )
                # SqlDAS.g:41:11: oing= ordering
                pass 
                self._state.following.append(self.FOLLOW_ordering_in_orderKw134)
                oing = self.ordering()

                self._state.following.pop()
                #action start
                orderingkw.append(str(((oing is not None) and [self.input.toString(oing.start,oing.stop)] or [None])[0]))
                #action end




                        
            except:
            	raise
        finally:

            pass
        return 

    # $ANTLR end "orderKw"

    class ordering_return(ParserRuleReturnScope):
        def __init__(self):
            super(SqlDASParser.ordering_return, self).__init__()





    # $ANTLR start "ordering"
    # SqlDAS.g:43:1: ordering : ( asc | desc );
    def ordering(self, ):

        retval = self.ordering_return()
        retval.start = self.input.LT(1)

        try:
            try:
                # SqlDAS.g:43:11: ( asc | desc )
                alt5 = 2
                LA5_0 = self.input.LA(1)

                if ((39 <= LA5_0 <= 40)) :
                    alt5 = 1
                elif ((41 <= LA5_0 <= 42)) :
                    alt5 = 2
                else:
                    nvae = NoViableAltException("", 5, 0, self.input)

                    raise nvae

                if alt5 == 1:
                    # SqlDAS.g:43:12: asc
                    pass 
                    self._state.following.append(self.FOLLOW_asc_in_ordering146)
                    self.asc()

                    self._state.following.pop()


                elif alt5 == 2:
                    # SqlDAS.g:43:16: desc
                    pass 
                    self._state.following.append(self.FOLLOW_desc_in_ordering148)
                    self.desc()

                    self._state.following.pop()


                retval.stop = self.input.LT(-1)


                        
            except:
            	raise
        finally:

            pass
        return retval

    # $ANTLR end "ordering"


    # $ANTLR start "selectList"
    # SqlDAS.g:44:1: selectList : kw= gkw ( COMMA kw= gkw )* ;
    def selectList(self, ):

        kw = None


        try:
            try:
                # SqlDAS.g:44:12: (kw= gkw ( COMMA kw= gkw )* )
                # SqlDAS.g:44:13: kw= gkw ( COMMA kw= gkw )*
                pass 
                self._state.following.append(self.FOLLOW_gkw_in_selectList159)
                kw = self.gkw()

                self._state.following.pop()
                #action start
                kws.append(str(((kw is not None) and [self.input.toString(kw.start,kw.stop)] or [None])[0]))
                #action end
                #action start
                validateKw(((kw is not None) and [self.input.toString(kw.start,kw.stop)] or [None])[0])
                #action end
                # SqlDAS.g:45:4: ( COMMA kw= gkw )*
                while True: #loop6
                    alt6 = 2
                    LA6_0 = self.input.LA(1)

                    if (LA6_0 == COMMA) :
                        alt6 = 1


                    if alt6 == 1:
                        # SqlDAS.g:46:3: COMMA kw= gkw
                        pass 
                        self.match(self.input, COMMA, self.FOLLOW_COMMA_in_selectList174)
                        self._state.following.append(self.FOLLOW_gkw_in_selectList181)
                        kw = self.gkw()

                        self._state.following.pop()
                        #action start
                        kws.append(str(((kw is not None) and [self.input.toString(kw.start,kw.stop)] or [None])[0]))
                        #action end
                        #action start
                        validateKw(((kw is not None) and [self.input.toString(kw.start,kw.stop)] or [None])[0])
                        #action end


                    else:
                        break #loop6




                        
            except:
            	raise
        finally:

            pass
        return 

    # $ANTLR end "selectList"

    class gkw_return(ParserRuleReturnScope):
        def __init__(self):
            super(SqlDASParser.gkw_return, self).__init__()





    # $ANTLR start "gkw"
    # SqlDAS.g:52:1: gkw : ( KW | ( ( 'count' | 'sum' ) '(' KW ')' ) );
    def gkw(self, ):

        retval = self.gkw_return()
        retval.start = self.input.LT(1)

        try:
            try:
                # SqlDAS.g:52:5: ( KW | ( ( 'count' | 'sum' ) '(' KW ')' ) )
                alt7 = 2
                LA7_0 = self.input.LA(1)

                if (LA7_0 == KW) :
                    alt7 = 1
                elif ((13 <= LA7_0 <= 14)) :
                    alt7 = 2
                else:
                    nvae = NoViableAltException("", 7, 0, self.input)

                    raise nvae

                if alt7 == 1:
                    # SqlDAS.g:52:7: KW
                    pass 
                    self.match(self.input, KW, self.FOLLOW_KW_in_gkw324)


                elif alt7 == 2:
                    # SqlDAS.g:52:12: ( ( 'count' | 'sum' ) '(' KW ')' )
                    pass 
                    # SqlDAS.g:52:12: ( ( 'count' | 'sum' ) '(' KW ')' )
                    # SqlDAS.g:52:13: ( 'count' | 'sum' ) '(' KW ')'
                    pass 
                    if (13 <= self.input.LA(1) <= 14):
                        self.input.consume()
                        self._state.errorRecovery = False

                    else:
                        mse = MismatchedSetException(None, self.input)
                        raise mse


                    self.match(self.input, 15, self.FOLLOW_15_in_gkw335)
                    self.match(self.input, KW, self.FOLLOW_KW_in_gkw338)
                    self.match(self.input, 16, self.FOLLOW_16_in_gkw341)





                retval.stop = self.input.LT(-1)


                        
            except:
            	raise
        finally:

            pass
        return retval

    # $ANTLR end "gkw"


    # $ANTLR start "constraintList"
    # SqlDAS.g:54:1: constraintList : constraint1 (rel= logicalOp constraint1 )* ;
    def constraintList(self, ):

        rel = None


        try:
            try:
                # SqlDAS.g:54:16: ( constraint1 (rel= logicalOp constraint1 )* )
                # SqlDAS.g:54:18: constraint1 (rel= logicalOp constraint1 )*
                pass 
                self._state.following.append(self.FOLLOW_constraint1_in_constraintList353)
                self.constraint1()

                self._state.following.pop()
                # SqlDAS.g:54:30: (rel= logicalOp constraint1 )*
                while True: #loop8
                    alt8 = 2
                    LA8_0 = self.input.LA(1)

                    if ((23 <= LA8_0 <= 24) or (29 <= LA8_0 <= 30)) :
                        alt8 = 1


                    if alt8 == 1:
                        # SqlDAS.g:55:2: rel= logicalOp constraint1
                        pass 
                        self._state.following.append(self.FOLLOW_logicalOp_in_constraintList363)
                        rel = self.logicalOp()

                        self._state.following.pop()
                        #action start
                        constraints.append(str(((rel is not None) and [self.input.toString(rel.start,rel.stop)] or [None])[0]));
                        #action end
                        self._state.following.append(self.FOLLOW_constraint1_in_constraintList372)
                        self.constraint1()

                        self._state.following.pop()


                    else:
                        break #loop8




                        
            except:
            	raise
        finally:

            pass
        return 

    # $ANTLR end "constraintList"

    class lopen_return(ParserRuleReturnScope):
        def __init__(self):
            super(SqlDASParser.lopen_return, self).__init__()





    # $ANTLR start "lopen"
    # SqlDAS.g:58:1: lopen : lb ( lb )* ;
    def lopen(self, ):

        retval = self.lopen_return()
        retval.start = self.input.LT(1)

        try:
            try:
                # SqlDAS.g:58:8: ( lb ( lb )* )
                # SqlDAS.g:58:10: lb ( lb )*
                pass 
                self._state.following.append(self.FOLLOW_lb_in_lopen383)
                self.lb()

                self._state.following.pop()
                # SqlDAS.g:58:12: ( lb )*
                while True: #loop9
                    alt9 = 2
                    LA9_0 = self.input.LA(1)

                    if (LA9_0 == 15) :
                        alt9 = 1


                    if alt9 == 1:
                        # SqlDAS.g:58:13: lb
                        pass 
                        self._state.following.append(self.FOLLOW_lb_in_lopen385)
                        self.lb()

                        self._state.following.pop()


                    else:
                        break #loop9



                retval.stop = self.input.LT(-1)


                        
            except:
            	raise
        finally:

            pass
        return retval

    # $ANTLR end "lopen"

    class ropen_return(ParserRuleReturnScope):
        def __init__(self):
            super(SqlDASParser.ropen_return, self).__init__()





    # $ANTLR start "ropen"
    # SqlDAS.g:59:1: ropen : rb ( rb )* ;
    def ropen(self, ):

        retval = self.ropen_return()
        retval.start = self.input.LT(1)

        try:
            try:
                # SqlDAS.g:59:8: ( rb ( rb )* )
                # SqlDAS.g:59:10: rb ( rb )*
                pass 
                self._state.following.append(self.FOLLOW_rb_in_ropen395)
                self.rb()

                self._state.following.pop()
                # SqlDAS.g:59:12: ( rb )*
                while True: #loop10
                    alt10 = 2
                    LA10_0 = self.input.LA(1)

                    if (LA10_0 == 16) :
                        alt10 = 1


                    if alt10 == 1:
                        # SqlDAS.g:59:13: rb
                        pass 
                        self._state.following.append(self.FOLLOW_rb_in_ropen397)
                        self.rb()

                        self._state.following.pop()


                    else:
                        break #loop10



                retval.stop = self.input.LT(-1)


                        
            except:
            	raise
        finally:

            pass
        return retval

    # $ANTLR end "ropen"


    # $ANTLR start "constraint1"
    # SqlDAS.g:60:1: constraint1 : (kl= lopen constraint (rel= logicalOp constraint )* kr= ropen | constraint );
    def constraint1(self, ):

        kl = None

        rel = None

        kr = None


        try:
            try:
                # SqlDAS.g:60:17: (kl= lopen constraint (rel= logicalOp constraint )* kr= ropen | constraint )
                alt12 = 2
                LA12_0 = self.input.LA(1)

                if (LA12_0 == 15) :
                    alt12 = 1
                elif (LA12_0 == KW) :
                    alt12 = 2
                else:
                    nvae = NoViableAltException("", 12, 0, self.input)

                    raise nvae

                if alt12 == 1:
                    # SqlDAS.g:60:19: kl= lopen constraint (rel= logicalOp constraint )* kr= ropen
                    pass 
                    self._state.following.append(self.FOLLOW_lopen_in_constraint1415)
                    kl = self.lopen()

                    self._state.following.pop()
                    #action start
                    c1 = {}
                    #action end
                    #action start
                    c1['bracket'] = str(((kl is not None) and [self.input.toString(kl.start,kl.stop)] or [None])[0])
                    #action end
                    #action start
                    if str(((kl is not None) and [self.input.toString(kl.start,kl.stop)] or [None])[0]) != '': constraints.append(c1)
                    #action end
                    self._state.following.append(self.FOLLOW_constraint_in_constraint1441)
                    self.constraint()

                    self._state.following.pop()
                    # SqlDAS.g:62:3: (rel= logicalOp constraint )*
                    while True: #loop11
                        alt11 = 2
                        LA11_0 = self.input.LA(1)

                        if ((23 <= LA11_0 <= 24) or (29 <= LA11_0 <= 30)) :
                            alt11 = 1


                        if alt11 == 1:
                            # SqlDAS.g:62:4: rel= logicalOp constraint
                            pass 
                            self._state.following.append(self.FOLLOW_logicalOp_in_constraint1453)
                            rel = self.logicalOp()

                            self._state.following.pop()
                            #action start
                            constraints.append(str(((rel is not None) and [self.input.toString(rel.start,rel.stop)] or [None])[0]));
                            #action end
                            self._state.following.append(self.FOLLOW_constraint_in_constraint1473)
                            self.constraint()

                            self._state.following.pop()


                        else:
                            break #loop11
                    self._state.following.append(self.FOLLOW_ropen_in_constraint1500)
                    kr = self.ropen()

                    self._state.following.pop()
                    #action start
                    c = {}
                    #action end
                    #action start
                    c['bracket'] = str(((kr is not None) and [self.input.toString(kr.start,kr.stop)] or [None])[0])
                    #action end
                    #action start
                    if str(((kr is not None) and [self.input.toString(kr.start,kr.stop)] or [None])[0]) != '':constraints.append(c)
                    #action end


                elif alt12 == 2:
                    # SqlDAS.g:65:5: constraint
                    pass 
                    self._state.following.append(self.FOLLOW_constraint_in_constraint1514)
                    self.constraint()

                    self._state.following.pop()



                        
            except:
            	raise
        finally:

            pass
        return 

    # $ANTLR end "constraint1"


    # $ANTLR start "constraint"
    # SqlDAS.g:67:1: constraint : (kw= KW op= compOpt val= spaceValue | kw= KW op1= inpython '(' val1= valueList ')' | kw= KW op2= like val2= KW | kw= KW op3= between val3= betValue );
    def constraint(self, ):

        kw = None
        val2 = None
        op = None

        val = None

        op1 = None

        val1 = None

        op2 = None

        op3 = None

        val3 = None


        try:
            try:
                # SqlDAS.g:67:12: (kw= KW op= compOpt val= spaceValue | kw= KW op1= inpython '(' val1= valueList ')' | kw= KW op2= like val2= KW | kw= KW op3= between val3= betValue )
                alt13 = 4
                LA13_0 = self.input.LA(1)

                if (LA13_0 == KW) :
                    LA13 = self.input.LA(2)
                    if LA13 == 43 or LA13 == 44:
                        alt13 = 4
                    elif LA13 == 31 or LA13 == 32:
                        alt13 = 2
                    elif LA13 == 33 or LA13 == 34 or LA13 == 35 or LA13 == 36:
                        alt13 = 3
                    elif LA13 == EQ or LA13 == LT or LA13 == GT or LA13 == NOT:
                        alt13 = 1
                    else:
                        nvae = NoViableAltException("", 13, 1, self.input)

                        raise nvae

                else:
                    nvae = NoViableAltException("", 13, 0, self.input)

                    raise nvae

                if alt13 == 1:
                    # SqlDAS.g:67:14: kw= KW op= compOpt val= spaceValue
                    pass 
                    kw=self.match(self.input, KW, self.FOLLOW_KW_in_constraint525)
                    #action start
                    c = {}
                    #action end
                    #action start
                    c['key'] = str(kw.text)
                    #action end
                    #action start
                    validateKw(kw.text)
                    #action end
                    self._state.following.append(self.FOLLOW_compOpt_in_constraint539)
                    op = self.compOpt()

                    self._state.following.pop()
                    #action start
                    c['op'] = str(((op is not None) and [self.input.toString(op.start,op.stop)] or [None])[0])
                    #action end
                    self._state.following.append(self.FOLLOW_spaceValue_in_constraint552)
                    val = self.spaceValue()

                    self._state.following.pop()
                    #action start
                    c['value'] = str(((val is not None) and [self.input.toString(val.start,val.stop)] or [None])[0])
                    #action end
                    #action start
                    constraints.append(c)
                    #action end


                elif alt13 == 2:
                    # SqlDAS.g:71:2: kw= KW op1= inpython '(' val1= valueList ')'
                    pass 
                    kw=self.match(self.input, KW, self.FOLLOW_KW_in_constraint567)
                    #action start
                    c = {}
                    #action end
                    #action start
                    c['key'] = str(kw.text)
                    #action end
                    #action start
                    validateKw(kw.text)
                    #action end
                    self._state.following.append(self.FOLLOW_inpython_in_constraint581)
                    op1 = self.inpython()

                    self._state.following.pop()
                    #action start
                    c['op'] = str(((op1 is not None) and [self.input.toString(op1.start,op1.stop)] or [None])[0])
                    #action end
                    self.match(self.input, 15, self.FOLLOW_15_in_constraint592)
                    self._state.following.append(self.FOLLOW_valueList_in_constraint598)
                    val1 = self.valueList()

                    self._state.following.pop()
                    #action start
                    c['value'] = str(((val1 is not None) and [self.input.toString(val1.start,val1.stop)] or [None])[0])
                    #action end
                    #action start
                    constraints.append(c);
                    #action end
                    self.match(self.input, 16, self.FOLLOW_16_in_constraint608)


                elif alt13 == 3:
                    # SqlDAS.g:77:2: kw= KW op2= like val2= KW
                    pass 
                    kw=self.match(self.input, KW, self.FOLLOW_KW_in_constraint634)
                    #action start
                    c = {}
                    #action end
                    #action start
                    c['key'] = str(kw.text)
                    #action end
                    #action start
                    validateKw(kw.text)
                    #action end
                    self._state.following.append(self.FOLLOW_like_in_constraint648)
                    op2 = self.like()

                    self._state.following.pop()
                    #action start
                    c['op'] = str(((op2 is not None) and [self.input.toString(op2.start,op2.stop)] or [None])[0])
                    #action end
                    val2=self.match(self.input, KW, self.FOLLOW_KW_in_constraint659)
                    #action start
                    c['value'] = str(val2.text)
                    #action end
                    #action start
                    constraints.append(c)
                    #action end


                elif alt13 == 4:
                    # SqlDAS.g:81:3: kw= KW op3= between val3= betValue
                    pass 
                    kw=self.match(self.input, KW, self.FOLLOW_KW_in_constraint676)
                    #action start
                    c = {}
                    #action end
                    #action start
                    c['key'] = str(kw.text)
                    #action end
                    #action start
                    validateKw(kw.text)
                    #action end
                    self._state.following.append(self.FOLLOW_between_in_constraint690)
                    op3 = self.between()

                    self._state.following.pop()
                    #action start
                    c['op'] = str(((op3 is not None) and [self.input.toString(op3.start,op3.stop)] or [None])[0])
                    #action end
                    self._state.following.append(self.FOLLOW_betValue_in_constraint700)
                    val3 = self.betValue()

                    self._state.following.pop()
                    #action start
                    c['value'] = str(((val3 is not None) and [self.input.toString(val3.start,val3.stop)] or [None])[0])
                    #action end
                    #action start
                    constraints.append(c)
                    #action end



                        
            except:
            	raise
        finally:

            pass
        return 

    # $ANTLR end "constraint"

    class spaceValue_return(ParserRuleReturnScope):
        def __init__(self):
            super(SqlDASParser.spaceValue_return, self).__init__()





    # $ANTLR start "spaceValue"
    # SqlDAS.g:85:1: spaceValue : KW ( KW )* ;
    def spaceValue(self, ):

        retval = self.spaceValue_return()
        retval.start = self.input.LT(1)

        try:
            try:
                # SqlDAS.g:85:12: ( KW ( KW )* )
                # SqlDAS.g:85:14: KW ( KW )*
                pass 
                self.match(self.input, KW, self.FOLLOW_KW_in_spaceValue749)
                # SqlDAS.g:85:17: ( KW )*
                while True: #loop14
                    alt14 = 2
                    LA14_0 = self.input.LA(1)

                    if (LA14_0 == KW) :
                        alt14 = 1


                    if alt14 == 1:
                        # SqlDAS.g:85:18: KW
                        pass 
                        self.match(self.input, KW, self.FOLLOW_KW_in_spaceValue752)


                    else:
                        break #loop14



                retval.stop = self.input.LT(-1)


                        
            except:
            	raise
        finally:

            pass
        return retval

    # $ANTLR end "spaceValue"

    class valueList_return(ParserRuleReturnScope):
        def __init__(self):
            super(SqlDASParser.valueList_return, self).__init__()





    # $ANTLR start "valueList"
    # SqlDAS.g:86:1: valueList : KW ( COMMA KW )* ;
    def valueList(self, ):

        retval = self.valueList_return()
        retval.start = self.input.LT(1)

        try:
            try:
                # SqlDAS.g:86:11: ( KW ( COMMA KW )* )
                # SqlDAS.g:86:13: KW ( COMMA KW )*
                pass 
                self.match(self.input, KW, self.FOLLOW_KW_in_valueList761)
                # SqlDAS.g:86:16: ( COMMA KW )*
                while True: #loop15
                    alt15 = 2
                    LA15_0 = self.input.LA(1)

                    if (LA15_0 == COMMA) :
                        alt15 = 1


                    if alt15 == 1:
                        # SqlDAS.g:86:18: COMMA KW
                        pass 
                        self.match(self.input, COMMA, self.FOLLOW_COMMA_in_valueList765)
                        self.match(self.input, KW, self.FOLLOW_KW_in_valueList767)


                    else:
                        break #loop15



                retval.stop = self.input.LT(-1)


                        
            except:
            	raise
        finally:

            pass
        return retval

    # $ANTLR end "valueList"

    class betValue_return(ParserRuleReturnScope):
        def __init__(self):
            super(SqlDASParser.betValue_return, self).__init__()





    # $ANTLR start "betValue"
    # SqlDAS.g:87:1: betValue : KW andpython KW ;
    def betValue(self, ):

        retval = self.betValue_return()
        retval.start = self.input.LT(1)

        try:
            try:
                # SqlDAS.g:87:10: ( KW andpython KW )
                # SqlDAS.g:87:12: KW andpython KW
                pass 
                self.match(self.input, KW, self.FOLLOW_KW_in_betValue777)
                self._state.following.append(self.FOLLOW_andpython_in_betValue779)
                self.andpython()

                self._state.following.pop()
                self.match(self.input, KW, self.FOLLOW_KW_in_betValue781)



                retval.stop = self.input.LT(-1)


                        
            except:
            	raise
        finally:

            pass
        return retval

    # $ANTLR end "betValue"


    # $ANTLR start "where"
    # SqlDAS.g:88:1: where : ( 'WHERE' | 'where' ) ;
    def where(self, ):

        try:
            try:
                # SqlDAS.g:88:7: ( ( 'WHERE' | 'where' ) )
                # SqlDAS.g:88:8: ( 'WHERE' | 'where' )
                pass 
                if (17 <= self.input.LA(1) <= 18):
                    self.input.consume()
                    self._state.errorRecovery = False

                else:
                    mse = MismatchedSetException(None, self.input)
                    raise mse






                        
            except:
            	raise
        finally:

            pass
        return 

    # $ANTLR end "where"

    class compOpt_return(ParserRuleReturnScope):
        def __init__(self):
            super(SqlDASParser.compOpt_return, self).__init__()





    # $ANTLR start "compOpt"
    # SqlDAS.g:89:1: compOpt : ( ( EQ ) | ( LT ) | ( GT ) | ( NOT ) ( EQ ) | ( EQ ) ( GT ) | ( EQ ) ( LT ) | ( LT ) ( EQ ) | ( GT ) ( EQ ) | ( LT ) ( GT ) );
    def compOpt(self, ):

        retval = self.compOpt_return()
        retval.start = self.input.LT(1)

        try:
            try:
                # SqlDAS.g:89:10: ( ( EQ ) | ( LT ) | ( GT ) | ( NOT ) ( EQ ) | ( EQ ) ( GT ) | ( EQ ) ( LT ) | ( LT ) ( EQ ) | ( GT ) ( EQ ) | ( LT ) ( GT ) )
                alt16 = 9
                alt16 = self.dfa16.predict(self.input)
                if alt16 == 1:
                    # SqlDAS.g:89:11: ( EQ )
                    pass 
                    # SqlDAS.g:89:11: ( EQ )
                    # SqlDAS.g:89:12: EQ
                    pass 
                    self.match(self.input, EQ, self.FOLLOW_EQ_in_compOpt801)





                elif alt16 == 2:
                    # SqlDAS.g:90:4: ( LT )
                    pass 
                    # SqlDAS.g:90:4: ( LT )
                    # SqlDAS.g:90:5: LT
                    pass 
                    self.match(self.input, LT, self.FOLLOW_LT_in_compOpt808)




